# vfs

./: .gitignore  CMakeLists.txt  readme.md  vfs.sln
dllhook/: dllhook.vcxproj  dllhook.vcxproj.filters  vfs.cpp  vfs.h
stereotgv/: CMakeLists.txt  calcTensor.cu  computeDerivatives.cu  conversion.cu  copyClone.cu  downscale.cu  flowToHsv.cu  imageConverter.cu  lib_link.h  limitRange.cu  medianFilter.cu  preconditioning.cu  scalar.cu  stereotgv.cu  stereotgv.h  stereotgv.vcxproj  stereotgv.vcxproj.filters  thresholdingL1.cu  updateDualVariables.cu  updatePrimalVariables.cu  upscale.cu  warpImage.cu
test_vfs/: CMakeLists.txt  calibrationVectorHalf.flo  calibrationVectorWangHalf.flo  main.cpp  test_vfs.vcxproj  translationVectorHalf.flo  translationVectorWangHalf.flo
